# RSschool_project

./: .gitignore  README.md  pyproject.toml  test.ipynb
src/: test.py
src/ForestType/: data.py  train.py
src/RSschool_project/: data.py  model.py  pipeline.py  predict.py  test.py  train.py
tests/: test_rsschool_project.py  test_src.py
